# aic-aipaas-v4

./: .bazelrc  .env.example  .gitignore  .gitmessage  BUILD.bazel  CONTRIBUTING  Dockerfile  Makefile  README.md  docker-compose.yml  package.json  tree.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/WORKFLOWS/: ci.yml  docker-publish.yml  release.yml  schema-validation.yml
docs/: index.md
infra/docker-compose/: docker-compose.override.yml
infra/observability/prometheus/: prometheus.yml
infra/postgres/init/: 01-init.sql
scripts/: setup-dev.sh  verify-setup.sh
